# pwavplayer

./: .gitignore  CLAUDE.md  CMakeLists.txt  Groups.md  LIESMICH.md  README.idf  README.md  build_and_deploy_full.ps1  config.txt  sdkconfig
main/: CMakeLists - Kopie.txt  CMakeLists.txt  cmdapi.c  cmdapi.h  cserial.c  encevB35.c  encevG80.c  encevW11.c  fupdate.c  httpserver.c  httpserver.h  idf_component.yml  if_B35.c  if_G80.c  if_flat.c  if_sys11.c  main.c  pevent.c  pgpio.h  platform.h  pwav.h  serial.c  usbserial.c  wavplayer.c  wifi.c  wifi.h
webapp/: API.md  PWAVplayer_config_editor.html  README.html  README.md  convert_and_deploy.ps1
